# dropbix

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  run_localhub.ps1
localhub/: __init__.py
localhub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
localhub/backend/: api.py  archive.py  auth.py  config.py  db.py  device_manager.py  models.py  network.py  notifications.py  proposals.py  settings.py  storage.py  sync.py  versioning.py
localhub/ui/: __init__.py  api_client.py  dialogs.py  main.py  pages.py  theme.py
tests/: test_api_client.py  test_entrypoint.py
